fixed overflow

--- a/main.css
+++ b/main.css
@@ -67,6 +67,8 @@ nav {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  max-width: 100%;
+  overflow: hidden;
   white-space: nowrap;
   -webkit-animation: typing 1.2s, blink 1s step-end infinite;
           animation: typing 1.2s, blink 1s step-end infinite;
